@@ -1,3 +1,7 @@
+2012-06-09  Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added support for custom data handlers, resolves #29196
+
 2012-06-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added support for namespaces in XML handling, resolves #30779
